# edit-context-menu

./: .gitignore  Cargo.toml  LICENSE  build.rs  install.bat
resources/: config.ini
src/: _.rs  app.rs  icon.rs  install.rs  main.rs  parsing.rs
src/edit_context_lib/: addtocontext.rs  addtopath.rs  backup.rs  mod.rs  types.rs
src/registry_io/: mod.rs  reader.rs  writer.rs
src/resources/: config.rs  resources.rs
src/ui/: appmodal.rs  appstyle.rs  components.rs  menu.rs  message.rs  mod.rs  state.rs
