[package]
name = "edit-context-window"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
copy_dir = "0.1.3"
eframe = "0.33.0"
egui = "0.33.0"
egui_extras = "0.33.0"
env_logger = "0.11.8"
log = "0.4.28"
regashii = "0.4.0"
rfd = "0.16.0"
rust-ini = "0.21.3"
uuid = { version="1.19.0", features = ["v4"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
winreg = { version = "0.55.0", features = ["transactions"] }

[build-dependencies]
copy_dir = "0.1.3"
